adde navbar and hero banner section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Players</title>
+    <script src="https://kit.fontawesome.com/a09e35ca2f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
+
 <body>
-    <h1>testing</h1>
+    <header>
+        <section class="header-main-container">
+            <nav>
+                <div class="menu">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <div class="nav-items">
+                    <p>Home</p>
+                    <p>Clubs</p>
+                    <p>World Cup 2023</p>
+                    <p>Upcoming Matches</p>
+                    <p>Contact</p>
+                </div>
+                <div>
+                    <button class="primary-button">
+                        <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                        Login
+                    </button>
+                </div>
+            </nav>
+            <div class="hero-container">
+                <div class="hero-text">
+                    <h1>Conmebol Copa America 2021</h1>
+                    <button class="primary-button">
+                        Watch Live
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+                <div class="hero-img">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
 </body>
+
 </html>
