--- a/index.html
+++ b/index.html
@@ -45,6 +45,118 @@
             </div>
         </section>
     </header>
+    <main>
+        <section id="players-container">
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-1.png" alt="Neymar Jr">
+                </div>
+                <div class="text-container">
+                    <h2>Neymar Jr</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-2.png" alt="Lionel Messi">
+                </div>
+                <div class="text-container">
+                    <h2>Lionel Messi</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-3.png" alt="Cristiano Ronaldo">
+                </div>
+                <div class="text-container">
+                    <h2>Cristiano Ronaldo</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-4.png" alt="Paulo Dybala">
+                </div>
+                <div class="text-container">
+                    <h2>Paulo Dybala</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-5.png" alt="Mesut Ozil ">
+                </div>
+                <div class="text-container">
+                    <h2>Mesut Ozil</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-6.png" alt="Mauro Icardi">
+                </div>
+                <div class="text-container">
+                    <h2>Mauro Icardi</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-7.png" alt="Di Maria">
+                </div>
+                <div class="text-container">
+                    <h2>Di Maria</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-8.png" alt="Kylian Mbappé">
+                </div>
+                <div class="text-container">
+                    <h2>Kylian Mbappé</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-9.png" alt="Mohamed Salah">
+                </div>
+                <div class="text-container">
+                    <h2>Mohamed Salah</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-10.png" alt="Harry Kane">
+                </div>
+                <div class="text-container">
+                    <h2>Harry Kane</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-11.png" alt="Kevin De Bruyne">
+                </div>
+                <div class="text-container">
+                    <h2>Kevin De Bruyne</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+            <div class="player-card">
+                <div class="img-container">
+                    <img src="images/players/player-12.png" alt="Philippe Coutinho">
+                </div>
+                <div class="text-container">
+                    <h2>Philippe Coutinho</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
