added highlights section

--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@
                 </div>
             </div>
         </section>
+
+        <section id="highlights">
+            <div class="highlight-text">
+                <h1>All Highlights 
+                    Copa America 2021</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="primary-button">
+                    Watch Now
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
+            <div class="highlight-img">
+                <img src="images/match.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 
