--- a/index.html
+++ b/index.html
@@ -172,6 +172,21 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <section id="footer">
+            <div class="footer-img">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="icons-container">
+                <div class="icon"><img src="images/Social Icons/Instagram.png" alt=""></div>
+                <div class="icon"><img src="images/Social Icons/Dribbble.png" alt=""></div>
+                <div class="icon"><img src="images/Social Icons/Twitter.png" alt=""></div>
+                <div class="icon"><img src="images/Social Icons/Youtube.png" alt=""></div>
+            </div>
+            <p>Copyright © 2022 Football</p>
+        </section>
+    </footer>
 </body>
 
 </html>
